# balderhub-waveformmonitor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/source/: conf.py  examples.rst  features.rst  index.rst  installation.rst  scenarios.rst  topic_intro.rst  utilities.rst
src/balderhub/waveformmonitor/lib/scenario_features/: __init__.py  test_config.py  waveform_monitor_feature.py  waveform_monitor_instrument.py  waveform_monitor_instrument_channel.py
src/balderhub/waveformmonitor/lib/setup_features/: __init__.py  dirty_waveform_monitor_channel.py  waveform_monitor_instrument_channel1.py  waveform_monitor_instrument_channel2.py
src/balderhub/waveformmonitor/lib/setup_features/siglent/: __init__.py  base_siglent_sds_series_instrument.py  siglent_sds_814x_hd_instrument.py
src/balderhub/waveformmonitor/scenarios/: __init__.py  scenario_play_and_record.py
