[metadata]
name = balderhub-waveformmonitor
description = balderhub-waveformmonitor: BalderHub Project for working with waveform monitor devices like programmable oscilloscopes
author = Max Stahlschmidt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://hub.balder.dev/projects/waveformmonitor
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
keywords = test, systemtest, reusable, scenario, junit, balder
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
project_urls =
    Source=https://github.com/balder-dev/balderhub-waveformmonitor/
    Tracker=https://github.com/balder-dev/balderhub-waveformmonitor/issues

[options]
packages =
    balderhub.waveformmonitor
    balderhub.waveformmonitor.lib
    balderhub.waveformmonitor.lib.scenario_features
    balderhub.waveformmonitor.lib.setup_features
    balderhub.waveformmonitor.lib.setup_features.siglent
    balderhub.waveformmonitor.lib.utils
    balderhub.waveformmonitor.scenarios

install_requires =
    baldertest
    balderhub-scpi
    balderhub-waveform
python_requires = >=3.9
package_dir =
    =src
setup_requires =
    setuptools
    setuptools-scm>=6.0
zip_safe = no
